k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app
  namespace: notes-app
  labels:
    app: notes-app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: notes-app
